gccida/c3/store_field
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5497:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5499:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode value_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5513:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5523:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5528:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v38; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5536:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5540:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v50; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5542:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v52; // [rsp+0h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5587:46: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !direct_store[mode] && ( unsigned int)( mode_class_0[mode] - 5) > 1 ) 
                                             ^~~~~~~~~~~~
                                             mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5604:30: error: use of undeclared identifier 'machine_mode'
v22 = convert_modes( mode, ( machine_mode)v25, v22, 1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5664:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v39.rtwint = ( __int64)v13->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/expr.c:5684:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v47 = ( _QWORD *)v44[1]; 
                 ^~~~~~
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/store_field/src/obj/expr.o] Error 1
